--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "version": "100.0.5",
     "license": "GPL-3.0",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
+        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
         "magento/module-config": "100.0.*",
         "magento/module-store": "100.0.*",
         "magento/module-checkout": "100.0.*",
