--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,21 @@
     "license": "GPL-3.0",
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
-        "magento/module-config": "~101.0.0",
-        "magento/module-store": "102.0.*",
-        "magento/module-checkout": "102.0.*",
-        "magento/module-sales": "102.0.*",
-        "magento/module-quote": "102.0.*",
-        "magento/module-customer": "102.0.*",
-        "magento/module-payment": "102.0.*",
-        "magento/module-backend": "102.0.*",
-        "magento/module-tax": "102.0.*",
-        "magento/module-directory": "102.0.*",
-        "magento/module-theme": "102.0.*",
-        "magento/module-catalog": "102.0.*",
-        "magento/module-eav": "102.0.*",
-        "magento/framework": "102.0.*",
-        "magento/module-ui": "102.0.*",
+        "magento/framework": "~102.0.2",
+        "magento/module-backend": "~101.0.2",
+        "magento/module-catalog": "~103.0.2",
+        "magento/module-checkout": "~100.3.2",
+        "magento/module-config": "~101.1.2",
+        "magento/module-customer": "~102.0.2",
+        "magento/module-directory": "~100.3.2",
+        "magento/module-eav": "~102.0.2",
+        "magento/module-payment": "~100.3.2",
+        "magento/module-quote": "~101.1.2",
+        "magento/module-sales": "~102.0.2",
+        "magento/module-store": "~101.0.2",
+        "magento/module-tax": "~100.3.2",
+        "magento/module-theme": "~101.0.2",
+        "magento/module-ui": "~101.1.2",
         "lib-libxml": "*"
     },
     "autoload": {
