--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "version": "102.0.5",
     "license": "GPL-3.0",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
+        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0",
         "magento/framework": "~102.0.2",
         "magento/module-backend": "~101.0.2",
         "magento/module-catalog": "~103.0.2",
